# metrics-lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cpu-mhz.js  index.html  main.js  tarpaulin.toml
.github/workflows/: bench.yml  ci.yml  setup-gh-pages.yml
benches/: metrics_bench.rs
benchmark-data/: data.js  index.html
docs/: API.md  GUIDELINES.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_REVIEW.md  README.md  api-stability.md  migrating-from-metrics-rs.md  performance-tuning.md  zero-overhead-proof.md
docs/benchmarks/: README.md  main.js
docs/k8s/: service.yaml  servicemonitor-secured.yaml  servicemonitor.yaml
docs/k8s/helm/: kube-prometheus-stack-values.yaml
docs/k8s/helm/app-chart/: values.yaml
docs/k8s/helm/app-chart/templates/: prometheusrule.yaml  servicemonitor.yaml
docs/legacy/: codecov.yml
docs/observability/: grafana-dashboard.json  recording-rules.yaml
examples/: async_batch_timing.rs  axum_middleware_metrics.rs  axum_registry_integration.rs  benchmark_comparison.rs  broker_throughput.rs  cache_hit_miss.rs  contention_admission.rs  cpu_stats.rs  custom_exporter_openmetrics.rs  health_dashboard.rs  memory_stats.rs  quick_start.rs  quick_tour.rs  streaming_rate_window.rs  token_bucket_limiter.rs
src/: adaptive.rs  async_support.rs  counter.rs  gauge.rs  lib.rs  rate_meter.rs  registry.rs  system_health.rs  timer.rs
tests/: api_md_doctest.rs  chaos_tests.rs  longevity_tests.rs
tools/: bench_regression_check.js  run_examples.sh
