# ╔══════════════════════════╗
# ║                          ║
# ║   ██╗      ██╗ ██████╗   ║
# ║   ██║      ██║ ██╔══██╗  ║
# ║   ██║      ██║ ██████╔╝  ║
# ║   ██║      ██║ ██╔══██╗  ║
# ║   ███████╗ ██║ ██████╔╝  ║
# ║   ╚══════╝ ╚═╝ ╚═════╝   ║
# ║                          ║
# ╚══════════════════════════╝
[package]
name    = "metrics-lib"
version = "0.8.3"
edition = "2021"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.70"

# License
license = "Apache-2.0"

# Description
description = "Lock-free, high-performance metrics for Rust: counters, gauges, timers, rate meters, async timing, adaptive sampling, and system health."
readme = "README.md"

# Keywords (5 total)
keywords = [
    "benchmark", 
    "performance", 
    "profiling", 
    "timing", 
    "metrics"
]

# Categories (5 total)
categories = [
    "development-tools::profiling", 
    "memory-management"
]

# Links
homepage      = "https://github.com/jamesgober/metrics-lib"
repository    = "https://github.com/jamesgober/metrics-lib"
documentation = "https://docs.rs/metrics-lib"


# Authors
authors = [
    "James Gober <code@jamesgober.dev>"
]



# FEATURE FLAGS
# #################################
[features]
count     = [] # Enables count.
gauge     = [] # Enables gauge.
timer     = [] # Enables timer.
meter     = [] # Enables rate meter.
sample    = [] # Enable statistical sampling..
bench-tests = [] # Enable running benchmark-style tests in CI or locally

# Enables async support (requires Tokio).
async       = ["dep:tokio"] 

# Enable histogram
histogram   = ["sample"] 

# Enables all features.
all = [ 
    "count", 
    "gauge", 
    "timer", 
    "meter", 
    "sample",
    "histogram", 
] 

# Default features (all enabled).
default = [ 
    "count", 
    "gauge", 
    "timer", 
] 

# Minimal build with core timing only (no default features).
minimal = [ 
    "count", 
    "gauge", 
    "timer", 
    "meter", 
    "sample",
    "histogram", 
] 

# Enables nightly Rust features for testing.
nightly     = []



# BENCHMARKS
# #################################

[[bench]]
name = "metrics_bench"
harness = false




# DEPENDENCIES
# #################################
[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
num_cpus = "1.16"
parking_lot = "0.12"


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# Pin Criterion minor for reproducible output layout in CI aggregation
criterion = { version = "=0.4.0", default-features = false }
tokio-test = "0.4"
half = "=2.2.1" # Pin transitive resolution (via plotters) to MSRV-compatible half version
doc-comment = "0.3"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
serde_json = "1.0"
# Tokio runtime for examples
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
# Use reqwest 0.11.x with default (native-tls) to remain MSRV 1.70-compatible
reqwest = { version = "=0.11.27", default-features = true, features = ["json"] }
anyhow = "1"
