#╔══════════════════════════╗
#║   ██╗      ██╗ ██████╗   ║
#║   ██║      ██║ ██╔══██╗  ║
#║   ██║      ██║ ██████╔╝  ║
#║   ██║      ██║ ██╔══██╗  ║ 
#║   ███████╗ ██║ ██████╔╝  ║
#║   ╚══════╝ ╚═╝ ╚═════╝   ║
#╠══════════════════════════╢
#║   Rust Metrics Library   ║
#╚══════════════════════════╝
[package]
name    = "metrics-lib"
version = "0.8.6"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.70"
edition = "2021"

# License
license = "Apache-2.0"

# Readme
readme = "README.md"

# Description
description = "The fastest metrics library for Rust. Lock-free 0.6ns gauges, 18ns counters, timers, rate meters, async timing, adaptive sampling, and system health. Cross-platform with minimal dependencies."

# Keywords (5 total)
keywords = [
    "benchmark", 
    "performance", 
    "profiling", 
    "timing", 
    "metrics"
]

# Categories (5 total)
categories = [
    "development-tools::profiling", 
    "memory-management"
]

# Links
homepage      = "https://github.com/jamesgober/metrics-lib"
repository    = "https://github.com/jamesgober/metrics-lib"
documentation = "https://docs.rs/metrics-lib"

# Authors
authors = [
    "James Gober <code@jamesgober.dev>"
]



# FEATURE FLAGS
# #################################
[features]
count       = [] # Enables count.
gauge       = [] # Enables gauge.
timer       = [] # Enables timer.
meter       = [] # Enables rate meter.
sample      = [] # Enable statistical sampling..
bench-tests = [] # Enable running benchmark-style tests in CI or locally

# Enables async support (requires Tokio).
async       = ["dep:tokio"] 

# Enable histogram
histogram   = ["sample"] 

# Enables all features.
all = [ 
    "count", 
    "gauge", 
    "timer", 
    "meter", 
    "sample",
    "histogram", 
] 

# Default features (all enabled).
default = [ 
    "count", 
    "gauge", 
    "timer", 
] 

# Minimal build with core timing only (no default features).
minimal = [ 
    "count", 
    "gauge", 
    "timer", 
    "meter", 
    "sample",
    "histogram", 
] 

# Enables nightly Rust features for testing.
nightly = []



# BENCHMARKS
# #################################
[[bench]]
name    = "metrics_bench"
harness = false



# DEPENDENCIES
# #################################
[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
num_cpus    = "1.16"
parking_lot = "0.12"
sysinfo = "0.29"



# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# Pin Criterion minor for reproducible output layout in CI aggregation
criterion = { version = "=0.4.0", default-features = false }
tokio-test = "0.4"
half = "=2.2.1" # Pin transitive resolution (via plotters) to MSRV-compatible half version
doc-comment = "0.3"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
serde_json = "1.0"
# Tokio runtime for examples
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
anyhow = "1"
tower = "0.5"
