# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "metrics-lib"
version = "0.9.1"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.70"
edition = "2021"

# License
license = "Apache-2.0"

# Readme
readme = "README.md"

# Description
description = "The fastest metrics library for Rust. Lock-free 0.6ns gauges, 18ns counters, timers, rate meters, async timing, adaptive sampling, and system health. Cross-platform with minimal dependencies."

# Keywords (5 total)
keywords = [
    "benchmark", 
    "performance", 
    "profiling", 
    "timing", 
    "metrics"
]

# Categories (5 total)
categories = [
    "development-tools::profiling", 
    "memory-management"
]

# Links
homepage      = "https://github.com/jamesgober/metrics-lib"
repository    = "https://github.com/jamesgober/metrics-lib"
documentation = "https://docs.rs/metrics-lib"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]



# FEATURE FLAGS
# #################################
[features]
count       = [] # Enables count.
gauge       = [] # Enables gauge.
timer       = [] # Enables timer.
meter       = [] # Enables rate meter.
sample      = [] # Enable statistical sampling..
bench-tests = [] # Enable running benchmark-style tests in CI or locally

# Enables async support (requires Tokio).
async       = ["dep:tokio"] 

# Enable histogram
histogram   = ["sample"] 

# Enables all stable features (no async).
all = [ 
    "count", 
    "gauge", 
    "timer", 
    "meter", 
    "sample",
    "histogram", 
] 

# Enables all features including async and serde.
full = [
    "count",
    "gauge",
    "timer",
    "meter",
    "sample",
    "histogram",
    "async",
    "serde",
]

# Wire serde feature to the optional dep.
serde = ["dep:serde"]

# Default features (all enabled).
default = [ 
    "count", 
    "gauge", 
    "timer", 
] 

# Minimal build: only the counter feature, no other defaults.
minimal = ["count"]

# Enables nightly Rust features for testing.
nightly = []



# BENCHMARKS
# #################################
[[bench]]
name    = "metrics_bench"
harness = false
required-features = ["meter"]

# EXAMPLES
# #################################
[[example]]
name = "quick_start"
required-features = ["meter"]

[[example]]
name = "quick_tour"
required-features = ["meter"]

[[example]]
name = "token_bucket_limiter"
required-features = ["meter"]

[[example]]
name = "contention_admission"
required-features = ["meter"]

[[example]]
name = "broker_throughput"
required-features = ["meter"]

[[example]]
name = "custom_exporter_openmetrics"
required-features = ["meter"]

[[example]]
name = "benchmark_comparison"
required-features = ["meter"]

[[example]]
name = "async_batch_timing"
required-features = ["async"]

[[example]]
name = "axum_middleware_metrics"
required-features = ["async"]

[[example]]
name = "health_dashboard"
required-features = ["async"]

[[example]]
name = "streaming_rate_window"
required-features = ["async", "meter"]

[[example]]
name = "axum_registry_integration"
required-features = ["async", "meter"]



# DEPENDENCIES
# #################################
[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
num_cpus    = "1.16"
parking_lot = "0.12"
sysinfo = { version = "0.29", default-features = false }



# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# Pin Criterion minor for reproducible output layout in CI aggregation
criterion = { version = "=0.4.0", default-features = false }
tokio-test = "0.4"
half = "=2.2.1" # Pin transitive resolution (via plotters) to MSRV-compatible half version
doc-comment = "0.3"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
serde_json = "1.0"
# Tokio runtime for examples
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
anyhow = "1"
tower = "0.5"
crossbeam-channel = "0.5"
